# InertiaBandsX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_macos.yml  build_windows.yml
plugin/: CMakeLists.txt
plugin/Source/: AutoHyperModelData.h  DspAutoHyperModel.cpp  DspAutoHyperModel.h  DspClustering.cpp  DspClustering.h  DspMasks.cpp  DspMasks.h  DspPcaProjection.cpp  DspPcaProjection.h  DspPerceptualBins.cpp  DspPerceptualBins.h  DspProcessing.cpp  DspProcessing.h  DspStft.cpp  DspStft.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utilities.h
release/InertiaBands-Windows-VST3/: InertiaBandsX.exp  InertiaBandsX.lib
release/InertiaBands-Windows-VST3/InertiaBandsX.vst3/Contents/Resources/: moduleinfo.json
scripts/: build_macos.sh  build_windows.ps1  bump_version.py  release_vst3_macos.sh  release_vst3_windows.ps1
training/: README.md  requirements.txt
training/app/: main.py  main_window.py  workers.py
training/core/: __init__.py  config.py  constants.py  descriptors.py  inference.py  modeling.py  objective.py  optimizer.py  presets.py  storage.py  transforms.py  types.py
training/models/: auto_model_20260222_202211.joblib  auto_model_20260222_202525.joblib  best_equations.json
training/scripts/: auto_collect_and_train.py  fetch_datasets.py
